Fix layout collapsing of folder cards in the merge modal grid

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1003,6 +1003,8 @@ input[type="range"]::-webkit-slider-thumb:hover {
     display: flex;
     flex-direction: column;
     position: relative;
+    height: 180px;
+    min-height: 180px;
 }
 .merge-folder-card:hover {
     border-color: var(--border-active);
@@ -1040,6 +1042,7 @@ input[type="range"]::-webkit-slider-thumb:hover {
 .merge-folder-card .merge-thumb {
     height: 120px;
     width: 100%;
+    flex-shrink: 0;
     overflow: hidden;
     background: rgba(255,255,255,0.02);
     display: flex;
@@ -1061,6 +1064,7 @@ input[type="range"]::-webkit-slider-thumb:hover {
     display: flex;
     flex-direction: column;
     gap: 0.15rem;
+    flex-grow: 1;
 }
 .merge-folder-card .merge-card-info .merge-card-name {
     font-weight: 600;
